welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:6: error: type mismatch;
 found   : Int(81)
 required: Boolean
    else if(60<speed<81){
                     ^caughtSpeeding:15: error: type mismatch;
 found   : Int(86)
 required: Boolean
    else if(65<speed<86){
                     ^